fix: fixed unwanted hover effects on mobile

--- a/apps/frontend/src/app/sections/education/education.component.css
+++ b/apps/frontend/src/app/sections/education/education.component.css
@@ -1,3 +1,9 @@
 ul > li {
-  @apply cursor-pointer border border-gray-300 p-4 m-2.5 md:m-1 rounded md:hover:bg-gray-50 ease-out md:hover:ease-in md:hover:scale-105 duration-300;
+  @apply cursor-pointer border border-gray-300 p-4 m-2.5 md:m-1 rounded ease-out duration-300;
+}
+
+@media screen and (min-width: 768px) and (hover: hover) {
+  .ul > li:hover {
+    @apply lg:hover:bg-gray-50 lg:hover:ease-in lg:hover:scale-105;
+  }
 }
