--- a/apps/frontend/src/app/shared/components/preview/preview.component.css
+++ b/apps/frontend/src/app/shared/components/preview/preview.component.css
@@ -1,3 +1,9 @@
 .preview-container {
-  @apply cursor-pointer border border-gray-300 p-4 m-2.5 md:m-1 rounded hover:bg-gray-50 ease-out hover:ease-in md:hover:scale-105 duration-300;
+  @apply cursor-pointer border border-gray-300 p-4 m-2.5 md:m-1 rounded ease-out duration-300;
+}
+
+@media screen and (min-width: 768px) and (hover: hover) {
+  .preview-container:hover {
+    @apply md:bg-gray-50 lg:hover:ease-in md:scale-105;
+  }
 }
